added menu popup, fixed webview issue, added converters for ui

--- a/public/Apps/YoutubeDownloader/YoutubeDownloader/MainPage.xaml
+++ b/public/Apps/YoutubeDownloader/YoutubeDownloader/MainPage.xaml
@@ -5,15 +5,21 @@
     xmlns:local="using:YoutubeDownloader"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="using:YoutubeDownloader.Converters" 
     mc:Ignorable="d"
-    DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+    <!--DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}"-->
 
     <WebView x:Name="WebViewControl"
              HorizontalAlignment="Stretch"
              VerticalAlignment="Stretch"
-             NavigationCompleted="Browser_NavigationCompleted" LoadCompleted="WebViewControl_LoadCompleted" FrameDOMContentLoaded="WebViewControl_FrameDOMContentLoaded" />
-
+             NavigationCompleted="Browser_NavigationCompleted" FrameContentLoading="WebViewControl_FrameContentLoading" />
+    
+    <Page.Resources>
+        <converters:VideoInfoToNameConverter x:Key="VideoInfoToName"></converters:VideoInfoToNameConverter>
+    </Page.Resources>
+    
     <Page.BottomAppBar>
         <CommandBar>
             <CommandBar.PrimaryCommands>
@@ -25,12 +31,12 @@
                     Label="forward"/>
                 <AppBarButton x:Name="VideoDownloadButton" Icon="Download">
                     <AppBarButton.Flyout>
-                        <ListPickerFlyout ItemsSource="{Binding VideoFormats}">
-                            <!--<ListPickerFlyout.ItemTemplate>
+                        <ListPickerFlyout ItemsSource="{Binding VideoInfos}">
+                            <ListPickerFlyout.ItemTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding VideoFormats}"></TextBlock>
+                                    <TextBlock Text="{Binding Converter={StaticResource VideoInfoToName}}"></TextBlock>
                                 </DataTemplate>
-                            </ListPickerFlyout.ItemTemplate>-->
+                            </ListPickerFlyout.ItemTemplate>
                         </ListPickerFlyout>
                         <!--<MenuFlyout>
                             <MenuFlyout.Items>
